--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
             "database"
         ],
         "psr-4": {
-            "App\\": "app/"
+            "Mikacom\\": "app/"
         }
     },
     "autoload-dev": {
